--- a/Code/package.json
+++ b/Code/package.json
@@ -17,6 +17,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^10.16.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
