--- a/Code/package.json
+++ b/Code/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^10.16.7",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
