--- a/Code/package.json
+++ b/Code/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^10.16.7",
+    "underscore": "^1.13.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
