--- a/Code/package.json
+++ b/Code/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "eslint": "^7.25.0",
+    "eslint": "^7.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
+    "react-typed": "^1.2.0",
     "recompose": "^0.30.0",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^3.4.0"
   }
 }
