--- a/Code/package.json
+++ b/Code/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^3.4.0"
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "2.3.1"
   }
 }
