--- a/Code/package.json
+++ b/Code/package.json
@@ -6,6 +6,8 @@
     "@brainhubeu/react-carousel": "^2.0.4",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@sentry/react": "^6.8.0",
+    "@sentry/tracing": "^6.8.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
